--- a/archives/toutiao-search/2023-10-01.md
+++ b/archives/toutiao-search/2023-10-01.md
@@ -1,59 +1,77 @@
 # 2023-10-01
 
-共 180 条
+共 194 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sun Oct 01 2023 13:00:42 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Sun Oct 01 2023 14:00:43 GMT+0800 (China Standard Time) -->
 1. [国庆的升旗仪式有多震撼](https://so.toutiao.com/search?keyword=国庆的升旗仪式有多震撼)
 1. [中国队首次包揽亚运男女百米冠军](https://so.toutiao.com/search?keyword=中国队首次包揽亚运男女百米冠军)
 1. [“中国速度”钱塘江畔立潮头](https://so.toutiao.com/search?keyword=“中国速度”钱塘江畔立潮头)
 1. [国庆当天30余万人齐聚天安门](https://so.toutiao.com/search?keyword=国庆当天30余万人齐聚天安门)
 1. [谢震业9秒97成为亚洲新“飞人”](https://so.toutiao.com/search?keyword=谢震业9秒97成为亚洲新“飞人”)
-1. [美参议院投票通过45天短期支出法案](https://so.toutiao.com/search?keyword=美参议院投票通过45天短期支出法案)
-1. [长沙再现拉链式人墙](https://so.toutiao.com/search?keyword=长沙再现拉链式人墙)
 1. [南京胖哥女儿因病去世](https://so.toutiao.com/search?keyword=南京胖哥女儿因病去世)
+1. [新华社特写：给张本智和的掌声](https://so.toutiao.com/search?keyword=新华社特写：给张本智和的掌声)
+1. [奥尼尔抱萌娃合影 娃表情亮了](https://so.toutiao.com/search?keyword=奥尼尔抱萌娃合影+娃表情亮了)
 1. [华为工作人员辟谣中秋送Mate60](https://so.toutiao.com/search?keyword=华为工作人员辟谣中秋送Mate60)
 1. [孟晚舟掌舵华为期间都做了什么](https://so.toutiao.com/search?keyword=孟晚舟掌舵华为期间都做了什么)
+1. [俞敏洪带你云游西藏纳木错](https://so.toutiao.com/search?keyword=俞敏洪带你云游西藏纳木错)
+1. [新款特斯拉Model Y上市 26.39万起](https://so.toutiao.com/search?keyword=新款特斯拉Model+Y上市 26.39万起)
+1. [奥尼尔说感谢杭州](https://so.toutiao.com/search?keyword=奥尼尔说感谢杭州)
 1. [张伟丽把300多斤的奥尼尔一把抱起](https://so.toutiao.com/search?keyword=张伟丽把300多斤的奥尼尔一把抱起)
-1. [媒体：美国政府在关门边缘紧急刹车](https://so.toutiao.com/search?keyword=媒体：美国政府在关门边缘紧急刹车)
-1. [尿急跳下高架桥男子无生命危险](https://so.toutiao.com/search?keyword=尿急跳下高架桥男子无生命危险)
 1. [购房补贴多少钱能够激励你买房](https://so.toutiao.com/search?keyword=购房补贴多少钱能够激励你买房)
+1. [尿急跳下高架桥男子无生命危险](https://so.toutiao.com/search?keyword=尿急跳下高架桥男子无生命危险)
+1. [游客爬长城3分钟走2步](https://so.toutiao.com/search?keyword=游客爬长城3分钟走2步)
+1. [超级黄金周变局：中国游客去哪了](https://so.toutiao.com/search?keyword=超级黄金周变局：中国游客去哪了)
+1. [京哈高速约50辆车被扎胎](https://so.toutiao.com/search?keyword=京哈高速约50辆车被扎胎)
+1. [媒体：美国政府在关门边缘紧急刹车](https://so.toutiao.com/search?keyword=媒体：美国政府在关门边缘紧急刹车)
+1. [链球选手砸中裁判现场画面曝光](https://so.toutiao.com/search?keyword=链球选手砸中裁判现场画面曝光)
+1. [曝兰州某中学校长和老师围殴学生](https://so.toutiao.com/search?keyword=曝兰州某中学校长和老师围殴学生)
+1. [天安门广场人山人海直播间祝福刷屏](https://so.toutiao.com/search?keyword=天安门广场人山人海直播间祝福刷屏)
+1. [链球决赛被砸伤裁判生命体征平稳](https://so.toutiao.com/search?keyword=链球决赛被砸伤裁判生命体征平稳)
+1. [母亲打往天堂的电话今年被民警接起](https://so.toutiao.com/search?keyword=母亲打往天堂的电话今年被民警接起)
+1. [外国媳妇第一次看天安门升旗](https://so.toutiao.com/search?keyword=外国媳妇第一次看天安门升旗)
+1. [女孩租房一年反复过敏发现床垫发霉](https://so.toutiao.com/search?keyword=女孩租房一年反复过敏发现床垫发霉)
+1. [亚运男篮赛场奏响两次国歌](https://so.toutiao.com/search?keyword=亚运男篮赛场奏响两次国歌)
+1. [国庆档新片票房破11亿](https://so.toutiao.com/search?keyword=国庆档新片票房破11亿)
+1. [长沙再现拉链式人墙](https://so.toutiao.com/search?keyword=长沙再现拉链式人墙)
+1. [兵马俑快被挤到没地方站了](https://so.toutiao.com/search?keyword=兵马俑快被挤到没地方站了)
+1. [坚如磐石于和伟吓到观众不敢吃火锅](https://so.toutiao.com/search?keyword=坚如磐石于和伟吓到观众不敢吃火锅)
+1. [大学生付餐具费吃完饭将餐具带走](https://so.toutiao.com/search?keyword=大学生付餐具费吃完饭将餐具带走)
+1. [景区吃饭前面排645桌](https://so.toutiao.com/search?keyword=景区吃饭前面排645桌)
+1. [拜登称拿不出钱也要支持乌克兰](https://so.toutiao.com/search?keyword=拜登称拿不出钱也要支持乌克兰)
+1. [女子进店不买东西上来就抱男店主](https://so.toutiao.com/search?keyword=女子进店不买东西上来就抱男店主)
+1. [美媒关注的项目被中国物理学家认领](https://so.toutiao.com/search?keyword=美媒关注的项目被中国物理学家认领)
+1. [坐在高铁上看高速堵车](https://so.toutiao.com/search?keyword=坐在高铁上看高速堵车)
+1. [什么是马凡氏综合征](https://so.toutiao.com/search?keyword=什么是马凡氏综合征)
+1. [国庆假期一派出所对外开放停车](https://so.toutiao.com/search?keyword=国庆假期一派出所对外开放停车)
+1. [中国短跑努力跑出新老交替阵痛期](https://so.toutiao.com/search?keyword=中国短跑努力跑出新老交替阵痛期)
+1. [《坚如磐石》连续2天单日票房破亿](https://so.toutiao.com/search?keyword=《坚如磐石》连续2天单日票房破亿)
+1. [乌克兰一周内经历四次“外交噩梦”](https://so.toutiao.com/search?keyword=乌克兰一周内经历四次“外交噩梦”)
+1. [江西警号086211重启](https://so.toutiao.com/search?keyword=江西警号086211重启)
+1. [警方回应两女生宿舍内被迫互扇耳光](https://so.toutiao.com/search?keyword=警方回应两女生宿舍内被迫互扇耳光)
+1. [《好事成双》黄嘉仪意外怀孕](https://so.toutiao.com/search?keyword=《好事成双》黄嘉仪意外怀孕)
+1. [理想汽车9月交付36060辆](https://so.toutiao.com/search?keyword=理想汽车9月交付36060辆)
+1. [海关查获“大白菜”为砗磲制品](https://so.toutiao.com/search?keyword=海关查获“大白菜”为砗磲制品)
+1. [武功山“拍照局长”给游客指导动作](https://so.toutiao.com/search?keyword=武功山“拍照局长”给游客指导动作)
+1. [男子高铁站强闯闸机被警方处罚](https://so.toutiao.com/search?keyword=男子高铁站强闯闸机被警方处罚)
+1. [美参议院投票通过45天短期支出法案](https://so.toutiao.com/search?keyword=美参议院投票通过45天短期支出法案)
 1. [38岁“中国巴菲特”关善祥离世](https://so.toutiao.com/search?keyword=38岁“中国巴菲特”关善祥离世)
 1. [印度乒乓全队如夺冠般庆祝](https://so.toutiao.com/search?keyword=印度乒乓全队如夺冠般庆祝)
 1. [美“零元购”者在商店盗窃视频曝光](https://so.toutiao.com/search?keyword=美“零元购”者在商店盗窃视频曝光)
-1. [母亲打往天堂的电话今年被民警接起](https://so.toutiao.com/search?keyword=母亲打往天堂的电话今年被民警接起)
-1. [外国媳妇第一次看天安门升旗](https://so.toutiao.com/search?keyword=外国媳妇第一次看天安门升旗)
 1. [池笑然：战朝鲜女足遭裁判不公对待](https://so.toutiao.com/search?keyword=池笑然：战朝鲜女足遭裁判不公对待)
-1. [链球选手砸中裁判现场画面曝光](https://so.toutiao.com/search?keyword=链球选手砸中裁判现场画面曝光)
-1. [曝兰州某中学校长和老师围殴学生](https://so.toutiao.com/search?keyword=曝兰州某中学校长和老师围殴学生)
-1. [景区吃饭前面排645桌](https://so.toutiao.com/search?keyword=景区吃饭前面排645桌)
-1. [超级黄金周变局：中国游客去哪了](https://so.toutiao.com/search?keyword=超级黄金周变局：中国游客去哪了)
-1. [新款特斯拉Model Y上市 26.39万起](https://so.toutiao.com/search?keyword=新款特斯拉Model+Y上市 26.39万起)
-1. [大学生付餐具费吃完饭将餐具带走](https://so.toutiao.com/search?keyword=大学生付餐具费吃完饭将餐具带走)
 1. [国庆机票价格为何突然跳水](https://so.toutiao.com/search?keyword=国庆机票价格为何突然跳水)
-1. [坐在高铁上看高速堵车](https://so.toutiao.com/search?keyword=坐在高铁上看高速堵车)
-1. [乌克兰一周内经历四次“外交噩梦”](https://so.toutiao.com/search?keyword=乌克兰一周内经历四次“外交噩梦”)
 1. [人潮汹涌 重庆如何迎客](https://so.toutiao.com/search?keyword=人潮汹涌+重庆如何迎客)
 1. [大四医学生列车上救人](https://so.toutiao.com/search?keyword=大四医学生列车上救人)
-1. [江西警号086211重启](https://so.toutiao.com/search?keyword=江西警号086211重启)
 1. [3分钟重温15次国庆阅兵珍贵画面](https://so.toutiao.com/search?keyword=3分钟重温15次国庆阅兵珍贵画面)
 1. [婚车偶遇2位新娘探出车窗互送喜糖](https://so.toutiao.com/search?keyword=婚车偶遇2位新娘探出车窗互送喜糖)
 1. [老人患阿尔兹海默53岁儿子一旁撒娇](https://so.toutiao.com/search?keyword=老人患阿尔兹海默53岁儿子一旁撒娇)
-1. [坚如磐石于和伟吓到观众不敢吃火锅](https://so.toutiao.com/search?keyword=坚如磐石于和伟吓到观众不敢吃火锅)
 1. [隧道堵车堵出一场演唱会](https://so.toutiao.com/search?keyword=隧道堵车堵出一场演唱会)
 1. [冯振烈士的姐姐来看望英雄弟弟](https://so.toutiao.com/search?keyword=冯振烈士的姐姐来看望英雄弟弟)
-1. [理想汽车9月交付36060辆](https://so.toutiao.com/search?keyword=理想汽车9月交付36060辆)
 1. [养老金超5000元需缴纳个人所得税吗](https://so.toutiao.com/search?keyword=养老金超5000元需缴纳个人所得税吗)
 1. [郁豹豹回到山西老家弟弟为他穿新鞋](https://so.toutiao.com/search?keyword=郁豹豹回到山西老家弟弟为他穿新鞋)
-1. [《好事成双》黄嘉仪意外怀孕](https://so.toutiao.com/search?keyword=《好事成双》黄嘉仪意外怀孕)
 1. [人民日报：只要努力 结果不会差](https://so.toutiao.com/search?keyword=人民日报：只要努力+结果不会差)
-1. [什么是马凡氏综合征](https://so.toutiao.com/search?keyword=什么是马凡氏综合征)
-1. [游客爬长城3分钟走2步](https://so.toutiao.com/search?keyword=游客爬长城3分钟走2步)
 1. [武警部队全力做好“双节”执勤安保](https://so.toutiao.com/search?keyword=武警部队全力做好“双节”执勤安保)
-1. [兵马俑快被挤到没地方站了](https://so.toutiao.com/search?keyword=兵马俑快被挤到没地方站了)
 1. [萌娃一边喂锦鲤一边摸鱼头](https://so.toutiao.com/search?keyword=萌娃一边喂锦鲤一边摸鱼头)
-1. [武功山“拍照局长”给游客指导动作](https://so.toutiao.com/search?keyword=武功山“拍照局长”给游客指导动作)
-1. [警方回应两女生宿舍内被迫互扇耳光](https://so.toutiao.com/search?keyword=警方回应两女生宿舍内被迫互扇耳光)
 1. [钱江潮今明两日已关闭网络预约通道](https://so.toutiao.com/search?keyword=钱江潮今明两日已关闭网络预约通道)
 1. [鲍珊菊谈亚运夺金感受一度哽咽](https://so.toutiao.com/search?keyword=鲍珊菊谈亚运夺金感受一度哽咽)
 1. [万羽和平鸽翱翔天安门上空](https://so.toutiao.com/search?keyword=万羽和平鸽翱翔天安门上空)
@@ -68,7 +86,6 @@
 1. [朝鲜举重队刷新5项世界纪录](https://so.toutiao.com/search?keyword=朝鲜举重队刷新5项世界纪录)
 1. [被一分为三的瓦格纳将如何重获新生](https://so.toutiao.com/search?keyword=被一分为三的瓦格纳将如何重获新生)
 1. [劳塔罗大四喜 国米4-0萨勒尼塔纳](https://so.toutiao.com/search?keyword=劳塔罗大四喜+国米4-0萨勒尼塔纳)
-1. [女子进店不买东西上来就抱男店主](https://so.toutiao.com/search?keyword=女子进店不买东西上来就抱男店主)
 1. [子弟兵在战位表白祖国](https://so.toutiao.com/search?keyword=子弟兵在战位表白祖国)
 1. [被五彩斑斓丰收景色美到了](https://so.toutiao.com/search?keyword=被五彩斑斓丰收景色美到了)
 1. [抖音的“公主请上车”是什么梗](https://so.toutiao.com/search?keyword=抖音的“公主请上车”是什么梗)
@@ -93,7 +110,6 @@
 1. [国庆机票价格跳水 退票重订省5千多](https://so.toutiao.com/search?keyword=国庆机票价格跳水+退票重订省5千多)
 1. [巴林选手获亚运会男子10000米金牌](https://so.toutiao.com/search?keyword=巴林选手获亚运会男子10000米金牌)
 1. [《坚如磐石》最该看透的7个真相](https://so.toutiao.com/search?keyword=《坚如磐石》最该看透的7个真相)
-1. [美媒关注的项目被中国物理学家认领](https://so.toutiao.com/search?keyword=美媒关注的项目被中国物理学家认领)
 1. [国乒女双无缘奖牌](https://so.toutiao.com/search?keyword=国乒女双无缘奖牌)
 1. [黄绮珊流泪为跑调致歉](https://so.toutiao.com/search?keyword=黄绮珊流泪为跑调致歉)
 1. [中国乒乓球单日三连败](https://so.toutiao.com/search?keyword=中国乒乓球单日三连败)
@@ -108,7 +124,6 @@
 1. [儿子去世儿媳带女儿回家陪公婆过节](https://so.toutiao.com/search?keyword=儿子去世儿媳带女儿回家陪公婆过节)
 1. [狗子被堵高速晕车晕到怀疑人生](https://so.toutiao.com/search?keyword=狗子被堵高速晕车晕到怀疑人生)
 1. [近期部分大宗商品价格持续上涨](https://so.toutiao.com/search?keyword=近期部分大宗商品价格持续上涨)
-1. [《坚如磐石》连续2天单日票房破亿](https://so.toutiao.com/search?keyword=《坚如磐石》连续2天单日票房破亿)
 1. [葛曼棋女子100米夺冠](https://so.toutiao.com/search?keyword=葛曼棋女子100米夺冠)
 1. [谢震业夺冠后拥抱妻子陆敏佳](https://so.toutiao.com/search?keyword=谢震业夺冠后拥抱妻子陆敏佳)
 1. [官方辟谣“高铁因超员无法发车”](https://so.toutiao.com/search?keyword=官方辟谣“高铁因超员无法发车”)
@@ -147,7 +162,6 @@
 1. [媒体：大同施暴学生不宜上普通学校](https://so.toutiao.com/search?keyword=媒体：大同施暴学生不宜上普通学校)
 1. [巴基斯坦俾路支省爆炸事件已致55死](https://so.toutiao.com/search?keyword=巴基斯坦俾路支省爆炸事件已致55死)
 1. [到长沙的游客订房最多的是三天两晚](https://so.toutiao.com/search?keyword=到长沙的游客订房最多的是三天两晚)
-1. [海关查获“大白菜”为砗磲制品](https://so.toutiao.com/search?keyword=海关查获“大白菜”为砗磲制品)
 1. [金价高位回落 黄金是否还值得买](https://so.toutiao.com/search?keyword=金价高位回落+黄金是否还值得买)
 1. [刀郎演唱《绣红旗》](https://so.toutiao.com/search?keyword=刀郎演唱《绣红旗》)
 1. [孙颖莎/王曼昱不敌日本组合无缘四强](https://so.toutiao.com/search?keyword=孙颖莎/王曼昱不敌日本组合无缘四强)
