--- a/archives/toutiao-search/2023-10-01.md
+++ b/archives/toutiao-search/2023-10-01.md
@@ -1,45 +1,72 @@
 # 2023-10-01
 
-共 207 条
+共 228 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sun Oct 01 2023 15:01:02 GMT+0800 (China Standard Time) -->
-1. [国庆的升旗仪式有多震撼](https://so.toutiao.com/search?keyword=国庆的升旗仪式有多震撼)
+<!-- 最后更新时间 Sun Oct 01 2023 16:00:54 GMT+0800 (China Standard Time) -->
 1. [中国队首次包揽亚运男女百米冠军](https://so.toutiao.com/search?keyword=中国队首次包揽亚运男女百米冠军)
-1. [“中国速度”钱塘江畔立潮头](https://so.toutiao.com/search?keyword=“中国速度”钱塘江畔立潮头)
+1. [亚运会跳水比赛现场惊现神曲](https://so.toutiao.com/search?keyword=亚运会跳水比赛现场惊现神曲)
+1. [亚运后浪奔涌 青春书写辉煌	](https://so.toutiao.com/search?keyword=亚运后浪奔涌+青春书写辉煌	)
 1. [孟晚舟掌舵华为期间都做了什么](https://so.toutiao.com/search?keyword=孟晚舟掌舵华为期间都做了什么)
-1. [尿急跳下高架桥男子无生命危险](https://so.toutiao.com/search?keyword=尿急跳下高架桥男子无生命危险)
-1. [杭州四季青火出圈引来奥尼尔](https://so.toutiao.com/search?keyword=杭州四季青火出圈引来奥尼尔)
-1. [谢震业9秒97成为亚洲新“飞人”](https://so.toutiao.com/search?keyword=谢震业9秒97成为亚洲新“飞人”)
+1. [英国防长：英国将首次在乌部署军队](https://so.toutiao.com/search?keyword=英国防长：英国将首次在乌部署军队)
 1. [南京胖哥女儿因病去世](https://so.toutiao.com/search?keyword=南京胖哥女儿因病去世)
-1. [华为工作人员辟谣中秋送Mate60](https://so.toutiao.com/search?keyword=华为工作人员辟谣中秋送Mate60)
 1. [新华社特写：给张本智和的掌声](https://so.toutiao.com/search?keyword=新华社特写：给张本智和的掌声)
+1. [英国要在乌驻军？美议员：或引三战](https://so.toutiao.com/search?keyword=英国要在乌驻军？美议员：或引三战)
+1. [华为工作人员辟谣中秋送Mate60](https://so.toutiao.com/search?keyword=华为工作人员辟谣中秋送Mate60)
+1. [尿急跳下高架桥男子无生命危险](https://so.toutiao.com/search?keyword=尿急跳下高架桥男子无生命危险)
+1. [孙颖莎连扳5局点完胜进决赛](https://so.toutiao.com/search?keyword=孙颖莎连扳5局点完胜进决赛)
+1. [谢震业9秒97成为亚洲新“飞人”](https://so.toutiao.com/search?keyword=谢震业9秒97成为亚洲新“飞人”)
+1. [吴艳妮专属bgm](https://so.toutiao.com/search?keyword=吴艳妮专属bgm)
 1. [景区吃饭前面排645桌](https://so.toutiao.com/search?keyword=景区吃饭前面排645桌)
+1. [张伟丽回应抱起奥尼尔：当时很纠结](https://so.toutiao.com/search?keyword=张伟丽回应抱起奥尼尔：当时很纠结)
+1. [对乌援助中断 美政府暂时避免关门](https://so.toutiao.com/search?keyword=对乌援助中断+美政府暂时避免关门)
+1. [何冰娇抬头强忍泪水 现场观众安慰](https://so.toutiao.com/search?keyword=何冰娇抬头强忍泪水+现场观众安慰)
 1. [张伟丽把300多斤的奥尼尔一把抱起](https://so.toutiao.com/search?keyword=张伟丽把300多斤的奥尼尔一把抱起)
-1. [《坚如磐石》开分6.7](https://so.toutiao.com/search?keyword=《坚如磐石》开分6.7)
-1. [购房补贴多少钱能够激励你买房](https://so.toutiao.com/search?keyword=购房补贴多少钱能够激励你买房)
-1. [游客爬长城3分钟走2步](https://so.toutiao.com/search?keyword=游客爬长城3分钟走2步)
-1. [女孩租房一年反复过敏发现床垫发霉](https://so.toutiao.com/search?keyword=女孩租房一年反复过敏发现床垫发霉)
-1. [媒体：美国政府在关门边缘紧急刹车](https://so.toutiao.com/search?keyword=媒体：美国政府在关门边缘紧急刹车)
 1. [坚如磐石于和伟吓到观众不敢吃火锅](https://so.toutiao.com/search?keyword=坚如磐石于和伟吓到观众不敢吃火锅)
-1. [京哈高速约50辆车被扎胎](https://so.toutiao.com/search?keyword=京哈高速约50辆车被扎胎)
-1. [大学生付餐具费吃完饭将餐具带走](https://so.toutiao.com/search?keyword=大学生付餐具费吃完饭将餐具带走)
+1. [黄金位置看全红婵陈芋汐夺金5跳](https://so.toutiao.com/search?keyword=黄金位置看全红婵陈芋汐夺金5跳)
 1. [链球选手砸中裁判现场画面曝光](https://so.toutiao.com/search?keyword=链球选手砸中裁判现场画面曝光)
+1. [京哈高速约50辆车被扎胎](https://so.toutiao.com/search?keyword=京哈高速约50辆车被扎胎)
+1. [超级黄金周变局：中国游客去哪了](https://so.toutiao.com/search?keyword=超级黄金周变局：中国游客去哪了)
+1. [媒体：美国政府在关门边缘紧急刹车](https://so.toutiao.com/search?keyword=媒体：美国政府在关门边缘紧急刹车)
+1. [母亲打往天堂的电话今年被民警接起](https://so.toutiao.com/search?keyword=母亲打往天堂的电话今年被民警接起)
+1. [假期最火玩具“萝卜刀”](https://so.toutiao.com/search?keyword=假期最火玩具“萝卜刀”)
+1. [黄轩首演银幕大反派学长笛和俄语](https://so.toutiao.com/search?keyword=黄轩首演银幕大反派学长笛和俄语)
+1. [网友：国羽女团每个人都尽力了](https://so.toutiao.com/search?keyword=网友：国羽女团每个人都尽力了)
+1. [西藏布达拉宫广场举行升国旗仪式](https://so.toutiao.com/search?keyword=西藏布达拉宫广场举行升国旗仪式)
+1. [朝方：美涉朝俄言论反映霸权思维](https://so.toutiao.com/search?keyword=朝方：美涉朝俄言论反映霸权思维)
+1. [国乒女双爆冷出局后沉默至今](https://so.toutiao.com/search?keyword=国乒女双爆冷出局后沉默至今)
+1. [兵马俑快被挤到没地方站了](https://so.toutiao.com/search?keyword=兵马俑快被挤到没地方站了)
+1. [《坚如磐石》开分6.7](https://so.toutiao.com/search?keyword=《坚如磐石》开分6.7)
+1. [岛内统派团体庆祝新中国成立74周年](https://so.toutiao.com/search?keyword=岛内统派团体庆祝新中国成立74周年)
+1. [俄媒：泽连斯基计划“冒险行动”](https://so.toutiao.com/search?keyword=俄媒：泽连斯基计划“冒险行动”)
+1. [中国刀塔队晋级亚运决赛](https://so.toutiao.com/search?keyword=中国刀塔队晋级亚运决赛)
+1. [男子取完钱忘拔卡被女子取走4000元](https://so.toutiao.com/search?keyword=男子取完钱忘拔卡被女子取走4000元)
+1. [游客爬长城3分钟走2步](https://so.toutiao.com/search?keyword=游客爬长城3分钟走2步)
+1. [《坚如磐石》连续2天单日票房破亿](https://so.toutiao.com/search?keyword=《坚如磐石》连续2天单日票房破亿)
+1. [新款特斯拉Model Y上市 26.39万起](https://so.toutiao.com/search?keyword=新款特斯拉Model+Y上市 26.39万起)
+1. [坐在高铁上看高速堵车](https://so.toutiao.com/search?keyword=坐在高铁上看高速堵车)
+1. [《莫斯科行动》高燃打戏有多吸睛](https://so.toutiao.com/search?keyword=《莫斯科行动》高燃打戏有多吸睛)
+1. [多地再现拉链式人墙](https://so.toutiao.com/search?keyword=多地再现拉链式人墙)
+1. [女子进店不买东西上来就抱男店主](https://so.toutiao.com/search?keyword=女子进店不买东西上来就抱男店主)
+1. [韩媒：若李刚仁状态不好应踢出首发](https://so.toutiao.com/search?keyword=韩媒：若李刚仁状态不好应踢出首发)
+1. [乌克兰一周内经历四次“外交噩梦”](https://so.toutiao.com/search?keyword=乌克兰一周内经历四次“外交噩梦”)
+1. [游客带国旗夜爬泰山](https://so.toutiao.com/search?keyword=游客带国旗夜爬泰山)
+1. [《好事成双》黄嘉仪意外怀孕](https://so.toutiao.com/search?keyword=《好事成双》黄嘉仪意外怀孕)
+1. [日本女足大胜菲律宾 将战中国女足](https://so.toutiao.com/search?keyword=日本女足大胜菲律宾+将战中国女足)
+1. [假期自驾交通安全指南](https://so.toutiao.com/search?keyword=假期自驾交通安全指南)
+1. [国庆的升旗仪式有多震撼](https://so.toutiao.com/search?keyword=国庆的升旗仪式有多震撼)
+1. [“中国速度”钱塘江畔立潮头](https://so.toutiao.com/search?keyword=“中国速度”钱塘江畔立潮头)
+1. [杭州四季青火出圈引来奥尼尔](https://so.toutiao.com/search?keyword=杭州四季青火出圈引来奥尼尔)
+1. [购房补贴多少钱能够激励你买房](https://so.toutiao.com/search?keyword=购房补贴多少钱能够激励你买房)
+1. [女孩租房一年反复过敏发现床垫发霉](https://so.toutiao.com/search?keyword=女孩租房一年反复过敏发现床垫发霉)
+1. [大学生付餐具费吃完饭将餐具带走](https://so.toutiao.com/search?keyword=大学生付餐具费吃完饭将餐具带走)
 1. [曝兰州某中学校长和老师围殴学生](https://so.toutiao.com/search?keyword=曝兰州某中学校长和老师围殴学生)
 1. [中国队夺射击女子多向飞碟团体金牌](https://so.toutiao.com/search?keyword=中国队夺射击女子多向飞碟团体金牌)
-1. [新款特斯拉Model Y上市 26.39万起](https://so.toutiao.com/search?keyword=新款特斯拉Model+Y上市 26.39万起)
-1. [母亲打往天堂的电话今年被民警接起](https://so.toutiao.com/search?keyword=母亲打往天堂的电话今年被民警接起)
 1. [国庆档新片票房破11亿](https://so.toutiao.com/search?keyword=国庆档新片票房破11亿)
 1. [奥尼尔抱萌娃合影 娃表情亮了](https://so.toutiao.com/search?keyword=奥尼尔抱萌娃合影+娃表情亮了)
-1. [兵马俑快被挤到没地方站了](https://so.toutiao.com/search?keyword=兵马俑快被挤到没地方站了)
 1. [超级老声大龄选手国庆集体送祝福](https://so.toutiao.com/search?keyword=超级老声大龄选手国庆集体送祝福)
 1. [贾一凡遗憾落泪：没法每场都稳赢](https://so.toutiao.com/search?keyword=贾一凡遗憾落泪：没法每场都稳赢)
 1. [国庆假期一派出所对外开放停车](https://so.toutiao.com/search?keyword=国庆假期一派出所对外开放停车)
-1. [《坚如磐石》连续2天单日票房破亿](https://so.toutiao.com/search?keyword=《坚如磐石》连续2天单日票房破亿)
-1. [坐在高铁上看高速堵车](https://so.toutiao.com/search?keyword=坐在高铁上看高速堵车)
-1. [俄媒：泽连斯基计划“冒险行动”](https://so.toutiao.com/search?keyword=俄媒：泽连斯基计划“冒险行动”)
-1. [乌克兰一周内经历四次“外交噩梦”](https://so.toutiao.com/search?keyword=乌克兰一周内经历四次“外交噩梦”)
-1. [超级黄金周变局：中国游客去哪了](https://so.toutiao.com/search?keyword=超级黄金周变局：中国游客去哪了)
 1. [萌娃一边喂锦鲤一边摸鱼头](https://so.toutiao.com/search?keyword=萌娃一边喂锦鲤一边摸鱼头)
 1. [公安部：确保人民群众安心度过双节](https://so.toutiao.com/search?keyword=公安部：确保人民群众安心度过双节)
 1. [乌克兰一输油管道破裂并引发火灾](https://so.toutiao.com/search?keyword=乌克兰一输油管道破裂并引发火灾)
@@ -47,12 +74,8 @@
 1. [官兵们用吊车升起国旗](https://so.toutiao.com/search?keyword=官兵们用吊车升起国旗)
 1. [理想汽车9月交付36060辆](https://so.toutiao.com/search?keyword=理想汽车9月交付36060辆)
 1. [公安部：今年160余名民警因公牺牲](https://so.toutiao.com/search?keyword=公安部：今年160余名民警因公牺牲)
-1. [女子进店不买东西上来就抱男店主](https://so.toutiao.com/search?keyword=女子进店不买东西上来就抱男店主)
-1. [男子取完钱忘拔卡被女子取走4000元](https://so.toutiao.com/search?keyword=男子取完钱忘拔卡被女子取走4000元)
 1. [中国女排今日迎亚运首战](https://so.toutiao.com/search?keyword=中国女排今日迎亚运首战)
 1. [武功山“拍照局长”给游客指导动作](https://so.toutiao.com/search?keyword=武功山“拍照局长”给游客指导动作)
-1. [游客带国旗夜爬泰山](https://so.toutiao.com/search?keyword=游客带国旗夜爬泰山)
-1. [日本女足大胜菲律宾 将战中国女足](https://so.toutiao.com/search?keyword=日本女足大胜菲律宾+将战中国女足)
 1. [拜登称拿不出钱也要支持乌克兰](https://so.toutiao.com/search?keyword=拜登称拿不出钱也要支持乌克兰)
 1. [国庆当天30余万人齐聚天安门](https://so.toutiao.com/search?keyword=国庆当天30余万人齐聚天安门)
 1. [俞敏洪带你云游西藏纳木错](https://so.toutiao.com/search?keyword=俞敏洪带你云游西藏纳木错)
@@ -66,7 +89,6 @@
 1. [什么是马凡氏综合征](https://so.toutiao.com/search?keyword=什么是马凡氏综合征)
 1. [中国短跑努力跑出新老交替阵痛期](https://so.toutiao.com/search?keyword=中国短跑努力跑出新老交替阵痛期)
 1. [警方回应两女生宿舍内被迫互扇耳光](https://so.toutiao.com/search?keyword=警方回应两女生宿舍内被迫互扇耳光)
-1. [《好事成双》黄嘉仪意外怀孕](https://so.toutiao.com/search?keyword=《好事成双》黄嘉仪意外怀孕)
 1. [海关查获“大白菜”为砗磲制品](https://so.toutiao.com/search?keyword=海关查获“大白菜”为砗磲制品)
 1. [男子高铁站强闯闸机被警方处罚](https://so.toutiao.com/search?keyword=男子高铁站强闯闸机被警方处罚)
 1. [美参议院投票通过45天短期支出法案](https://so.toutiao.com/search?keyword=美参议院投票通过45天短期支出法案)
@@ -130,7 +152,6 @@
 1. [误入高架桥跳下男子无生命危险](https://so.toutiao.com/search?keyword=误入高架桥跳下男子无生命危险)
 1. [热刺主帅：没有技术能保证消除误判](https://so.toutiao.com/search?keyword=热刺主帅：没有技术能保证消除误判)
 1. [全红婵回应包上挂满小乌龟](https://so.toutiao.com/search?keyword=全红婵回应包上挂满小乌龟)
-1. [亚运会跳水比赛现场惊现神曲](https://so.toutiao.com/search?keyword=亚运会跳水比赛现场惊现神曲)
 1. [谢震业百米夺冠后与母亲相拥](https://so.toutiao.com/search?keyword=谢震业百米夺冠后与母亲相拥)
 1. [东部战区连发三条视频有何深意](https://so.toutiao.com/search?keyword=东部战区连发三条视频有何深意)
 1. [31岁战士16次担任天府广场升旗手](https://so.toutiao.com/search?keyword=31岁战士16次担任天府广场升旗手)
